Fix empty gap from <h3> when arcade city is not specified.

--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,6 +1,7 @@
 .message-hidden,
 li.arcade-list-item:first-child,
-.arcade-nav[href^="#"] {
+.arcade-nav[href^="#"],
+.arcade-city:empty {
     display: none;
 }
 
